syntax = "proto3";

                 package disenchantLootTemplate;
service DisenchantLootTemplateService {
 rpc createDisenchantLootTemplate (DisenchantLootTemplateCreateInput) returns (DisenchantLootTemplate) {}
rpc disenchantLootTemplates (findManyParams) returns (stream DisenchantLootTemplate) {}
rpc disenchantLootTemplate (DisenchantLootTemplateWhereUniqueInput) returns (DisenchantLootTemplate) {}
rpc updateDisenchantLootTemplate (DisenchantLootTemplateUpdateInput) returns (DisenchantLootTemplate) {}
rpc deleteDisenchantLootTemplate (DisenchantLootTemplateWhereUniqueInput) returns (DisenchantLootTemplate) {} 
 }
message DisenchantLootTemplateCreateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message DisenchantLootTemplate {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message DisenchantLootTemplateWhereUniqueInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message DisenchantLootTemplateUpdateInput {
int32 chance = 1;
string comment = 2;
string createdAt = 3;
int32 entry = 4;
int32 groupId = 5;
string id = 6;
int32 item = 7;
int32 lootMode = 8;
int32 maxCount = 9;
int32 minCount = 10;
bool questRequired = 11;
int32 reference = 12;
string updatedAt = 13;
};
message findManyParams {

};